# starlink-pyndf

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  MANIFEST.in  PKG-INFO  README  README.rst  ndf_csource.lis  notes.txt  setup.py  setup_functions.py
ary_cgenfiles/: ary1Badx.c  ary1Bppx.c  ary1Cvfx.c  ary1Cvtx.c  ary1Gt1x.c  ary1Gtnx.c  ary1Pt1x.c  ary1Ptnx.c  ary1Zerx.c  ary1_cgen.h  aryGtszx.c  aryPtszx.c  ary_cgen.h
ast_missingincludes/: version.h
cnf-5.1-0/: CNF_PAR  Makefile.in  cnfLock.c  config.h.in  configure
doc/: Makefile  conf.py  index.rst  starlink.hds.rst  starlink.rst
ems-2.4-0/: EMS_ERR  Makefile.in  config.h.in  configure  ems_fioer.c  ems_link  ems_link_adam  fac_104_err
hds-6.0-1/: CMP_ERR  DAT_ERR  DAT_PAR  Makefile.in  aclocal.m4  config.h.in  configure  fac_200_err  fac_230_err  sun92.htx_tar
hds-v4-5.2-1/: Makefile.am  Makefile.in  component.xml.in  config.h.in  configure  configure.ac  dat1.h  dat1EmsSetBigi.c  dat1EmsSetBigu.c  dat1EmsSetHdsdim.c  dat1_alloc_lcp.c  datParen.c  dat_err.h  datalter.c  datfinind.c  datget.c  datlocops.c  dattemp.c  fac_200_err  hds.h  hds1.h  hds1_types.h  hdsEwild.c  hdsInfoI.c  hdsStop.c  hdsWild.c  hds_types.h  hds_v4.h  hds_v4_map.h  hdsnew.c  hdsopclos.c  make-hds-types.c  newhdsv4_files.  orighdsv4_files.  rec1_deall_frame.c  rec1_extend_file.c  rec1_find_file.c  rec1_map_frame.c  rec1_read_file.c  rec1_unmap_frame.c  (+5 more)
hds-v4-missingincludes/: hds_types.h
hds-v4_missingincludes/: hds1_types.h  hds_types.h
hds-v5-1.0-1/: Makefile.am  Makefile.in  aclocal.m4  component.xml.in  config.h.in  configure  configure.ac  dat1.h  dat1AllocLoc.c  dat1Annul.c  dat1Coords2CellName.c  dat1CreateStructureCell.c  dat1CvtChar.c  dat1CvtLogical.c  dat1DumpLoc.c  dat1EncodeSubscript.c  dat1EraseHandle.c  dat1ExportDims.c  dat1FixNameCell.c  dat1FreeHandle.c  dat1FreeLoc.c  dat1GetAttr.c  dat1GetAttrBool.c  dat1GetAttrHdsdims.c  dat1GetAttrInt.c  dat1GetAttrString.c  dat1GetBounds.c  dat1GetDataDims.c  dat1GetFullName.c  dat1GetParentID.c  dat1GetStructureDims.c  dat1H5EtoEMS.c  dat1Handle.c  dat1HandleLock.c  dat1HandleMsg.c  dat1ImportDims.c  dat1ImportFloc.c  dat1Index2Coords.c  dat1InitHDF5.c  dat1IsStructure.c  (+114 more)
hds-v5_missingincludes/: hds1_types.h  hds_types.h
hds_missingincludes/: cmp_err.h
includefiles/: prm_par.h
includefiles/star/: hds_v5.h  mem.h
mers-2.2-0/: ERR_ERR  MSG_ERR  Makefile.in  config.h.in  configure  fac_102_err  fac_103_err
missingincludes/: ary_err.h  ast.h  dat_err.h  ems_err.h  err_err.h  hds_types.h  msg_err.h  ndf_cgen.h  ndf_err.h  one_err.h  sai_err.h
missingincludes/star/: hds_types.h
ndf_cgenfiles/: ndf1Adex.c  ndf1Adix.c  ndf1Avex.c  ndf1Awex.c  ndf1Awix.c  ndf1Bppx.c  ndf1Cvtx.c  ndf1Qmax.c  ndf1S2vx.c  ndf1SqLimit.c  ndf1V2sx.c  ndfGtszx.c  ndfPtszx.c  ndfXgt0x.c  ndfXpt0x.c
ndf_missingincludes/: ndf1_cgen.h
one-1.5-1/: Makefile.in  ONE_ERR  aclocal.m4  config.h.in  configure  fac_1522_err  sun234.htx_tar
prm/: prm_cgen.h  prm_err.h  prm_par.h  vecBtox.c  vecDtox.c  vecFtox.c  vecItox.c  vecKtox.c  vecUBtox.c  vecUWtox.c  vecWtox.c
sae-1.1/: Makefile.in  SAI_ERR  aclocal.m4  configure  fac_210_err  sai_err.h
sphinx/: conf.py  index.rst  starlink.hds.rst  starlink.ndf.rst  starlink.ndfpack.rst
star-thirdparty-hdfgroup-1.0/: Makefile.in  aclocal.m4  configure
star-thirdparty-hdfgroup-1.0/hdf5/: Makefile.in  aclocal.m4  configure
star-thirdparty-hdfgroup-1.0/hdf5/hdf5/: .gitignore
star-thirdparty-hdfgroup-1.0/hdf5/hdf5/src/: H5F.c  H5Fpkg.h  H5Fpublic.h
starlink/: hds.c  hds.pxd  hds.pyx  ndf.pxd  ndf.pyx
starlink/hds/: hds.c  hds.pxd  hds.pyx
starlink/ndf/: Axis.py  Ndf.py  __init__.py  ndf.c
starlink/ndfpack/: Ndf.py  __init__.py  axis.py  ndf.py
starmem-0.2-1/: Makefile.in  aclocal.m4  config.h.in  configure
starutil-0.1-1/: Makefile.in  config.h.in  configure
test/: README  run_test.sh  test_exceptions.py  test_fullread.py  test_hds.py  test_simplendf.py  test_wcs.py
test/data/: ndf_test.sdf
trm/ndf/: __init__.py  ndf.c
